fix: update timeline

--- a/src/components/Experiences.astro
+++ b/src/components/Experiences.astro
@@ -52,7 +52,7 @@ import ExperienceCard from './ExperienceCard.astro';
   </li>
   <li class="p-0">
     <ExperienceCard
-      years="2021 - 2022"
+      years="2022 - 2023"
       title="PT Majoo Teknologi Indonesia"
       webLink="https://www.majoo.id/"
       position="Front-End Engineer"
@@ -95,7 +95,7 @@ import ExperienceCard from './ExperienceCard.astro';
       years="2018 - 2022"
       title="Various Engineering Firms"
       webLink="https://viramakarya.co.id/virama/"
-      position="Civil - Water Engineer"
+      position="Civil - Water Engineer (Analytics)"
       skills={[
         'AutoCAD',
         'QGIS',
